--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,15 @@
     "type": "project",
     "require": {
         "phpunit/phpunit": "^5.0",
-        "mockery/mockery": "^1.2",
+        "mockery/mockery": "^1.3@dev",
         "php": ">=5.6"
     },
     "autoload": {
-    "psr-4": {
-      "App\\": "src",
-      "App\\Test\\": "test/src"
-    }
-  },
+        "psr-4": {
+            "App\\": "src",
+            "App\\Test\\": "test/src"
+        }
+    },
     "license": "MIT",
     "minimum-stability": "dev"
 }
